# aiogram_practice

./: .env.example  .gitignore  Makefile  config.py  main.py  models.py  pyproject.toml  web_main.py
