[project]
name = "aiogram-practice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "starlette-admin>=0.15.1",
    "uvicorn>=0.35.0",
]
